--- a/index.html
+++ b/index.html
@@ -95,4 +95,21 @@
   
   <script src="script.js"></script>
 </body>
+
+<footer class="footer">
+  <a href="https://x.com/julio_khulio" class="icon">
+    <img src="imagens/x claro.png" class="default">
+    <img src="imagens/x escuro.png" class="hover">
+  </a>
+
+  <a href="https://github.com/Khuli0" class="icon">
+    <img src="imagens/github-icon-lg claro.png" class="default">
+    <img src="imagens/github-icon-lg escuro.png" class="hover">
+  </a>
+
+  <a href="https://www.linkedin.com/in/julio-pereira-155318218/" class="icon">
+    <img src="imagens/linkedin claro.png" class="default">
+    <img src="imagens/linkedin escuro.png" class="hover">
+  </a>
+</footer>
 </html>
