botao informação/atualizaçao fotos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,35 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 class="titulo">TERMO</h1>
+  <div class="topo">
+  <h1>TERMO</h1>
+  <button id="abrirModal">
+    <img src="imagens/i.png" height="30px" width="30px" alt="informações" class="abrirModal">
+  </button>
+</div>
+
+<div id="modal" class="modal">
+  <div class="modal-conteudo">
+    <p>Esse projeto foi criado a fins de estudo e foi inspirado no <a href="https://term.ooo" target="_blank">Termo</a></p>
+    <footer class="footer">
+  <a href="https://x.com/julio_khulio" class="icon" target="_blank">
+    <img src="imagens/x claro.png" class="default">
+    <img src="imagens/x escuro.png" class="hover">
+  </a>
+
+  <a href="https://github.com/Khuli0" class="icon" target="_blank">
+    <img src="imagens/github-icon-lg claro.png" class="default">
+    <img src="imagens/github-icon-lg escuro.png" class="hover">
+  </a>
+
+  <a href="https://www.linkedin.com/in/julio-pereira-155318218/" class="icon" target="_blank">
+    <img src="imagens/linkedin claro.png" class="default">
+    <img src="imagens/linkedin escuro.png" class="hover">
+  </a>
+</footer>
+  </div>
+</div>
+  
 <!-- box para adicionar palavras, "maxlength 1 (para apenas 1 letra por box)"-->
   <div class="grid-container">
     <div class="terminal-grid">
@@ -95,21 +123,4 @@
   
   <script src="script.js"></script>
 </body>
-
-<footer class="footer">
-  <a href="https://x.com/julio_khulio" class="icon">
-    <img src="imagens/x claro.png" class="default">
-    <img src="imagens/x escuro.png" class="hover">
-  </a>
-
-  <a href="https://github.com/Khuli0" class="icon">
-    <img src="imagens/github-icon-lg claro.png" class="default">
-    <img src="imagens/github-icon-lg escuro.png" class="hover">
-  </a>
-
-  <a href="https://www.linkedin.com/in/julio-pereira-155318218/" class="icon">
-    <img src="imagens/linkedin claro.png" class="default">
-    <img src="imagens/linkedin escuro.png" class="hover">
-  </a>
-</footer>
 </html>
